# Furina-Code

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
_handoff/archived_routes/: MIMO_HEADLESS_BACKEND_ROUTE.md
_project_source/active/: 00_START_HERE.md  01_SOURCE_AUTHORITY_AND_CONFLICT_RULES.md  02_ACTIVE_SOURCE_FILE_MAP.md  99_INTEGRITY_MANIFEST.md  PACKAGE_QUALITY_AUDIT.md  SHA256SUMS.txt
_project_source/scripts/: build_source_pack.py
_project_source/templates/: CHATGPT_PROJECT_SOURCE_REPLACEMENT_GUIDE.md  LOCAL_AI_SOURCE_PACK_UPDATE_TASK_TEMPLATE.md
docs/: README.md
docs/adr/: ADR-0001_PYTHON_BASELINE_AND_DEPENDENCY_POLICY.md  ADR-0002_MIMO_INTEGRATION_MODE.md
docs/handoff/: E0_REPOSITORY_REALITY_REPORT.md
docs/implementation/: E1_FIRST_MINIMAL_REAL_CLOSED_LOOP_SPEC_V0.1.md  E2_TECHNICAL_BASELINE_AND_RESOURCE_VERIFICATION_V0.1.md  E3_LOCAL_LIFE_SPINE_V0.1.md  E4_READ_ONLY_REAL_LOOP_V0.1.md  THEORETICAL_L3_HANDOFF.md
docs/integration/: MC1_BACKEND_PORT_AND_SANDBOX_CONTRACT_V0.1.md  MIMO_INTERFACE_REALITY_REPORT_V0.1.md
src/furina_code/: __init__.py  __main__.py  cli.py
tests/: test_environment_baseline.py  test_package_installation.py
tests/backend/: test_backend_dependency_boundary.py  test_backend_port.py  test_file_backend.py  test_mimo_cli_adapter.py
tests/e3/: test_binding_invariants.py  test_concurrent_revision.py  test_event_integrity.py  test_head_integrity.py  test_integrity_detection.py  test_multi_binding_continuity.py  test_normal_life_spine.py  test_object_event_atomicity.py  test_owner_and_revision.py  (+4 more)
(+110 files in other folders)
