[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "furina-code"
version = "0.0.0"
description = "Local continuous-life operating system foundation for Furina Code."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
